--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ future==0.18.2
 img2pdf==0.3.3
 Pillow==7.0.0
 pycparser==2.20
+PyPDF2==1.26.0
 python-telegram-bot==12.4.2
 six==1.14.0
 tornado==6.0.4
